--- a/hospital-info-service.yml
+++ b/hospital-info-service.yml
@@ -6,7 +6,13 @@ spring:
     username: root  
     password: srivatsan
     driver-class-name: com.mysql.cj.jdbc.Driver
-    
+
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka 
     
   jpa:
     hibernate:
