--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,22 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/test
+    username: root  
+    password: srivatsan
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka  
+      defaultZone: http://localhost:8761/eureka 
+    
+  jpa:
+    hibernate:
+      ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
+    
+
