--- a/customer-service/application.yml
+++ b/customer-service/application.yml
@@ -1,10 +1,22 @@
 spring:
-  main:
-    banner-mode: 'off'
+  datasource:
+    url: jdbc:h2:file:C:/h2data/sample
+    username: sa  
+    password: srivatsan
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2    
+  jpa:
+    hibernate:
+      ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
 
-  
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-          
+
