--- a/order-delivery-service/application.yml
+++ b/order-delivery-service/application.yml
@@ -11,3 +11,10 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - "*"  
