--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,31 @@
-custom:
-  message: Welcome to Nashik
+  
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    password: srivatsan
+    url: jdbc:mysql://localhost:3306/test
+    username: root
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
+    hibernate:
+      ddl-auto: update
+    show-sql: true  
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - "*"    
+ 
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+      
+      
+        
